--- a/Commuer/WebContent/css/style.css
+++ b/Commuer/WebContent/css/style.css
@@ -73,6 +73,8 @@ abbr[title] {
 b,
 strong {
   font-weight: bold;
+  color: white;
+  font-size: 1.05em;
 }
 dfn {
   font-style: italic;
@@ -1110,13 +1112,14 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337cbb;
+  color: black;
   text-decoration: none;
+  font-size:1.05em;
 }
 a:hover,
 a:focus {
-  color: #23547f;
-  text-decoration: underline;
+  color: black;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
